--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,24 @@
 .App {
+  width: 98%;
+}
+.tc {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
+.list-wrap {
+  width: 100%;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.list-wrap .title-top {
+  border-bottom: 1px solid #cdcaca;
+  font-size: 18px;
 }
-
-.App-link {
-  color: #09d3ac;
+.list-wrap .pro-wrap {
+  width: 100%;
+  max-height: 630px;
+  overflow-y: auto;
+  padding: 10px 6px;
+}
+.pro-card {
+  margin: 10px 0;
+  border: 1px solid #ddd;
+  line-height: 80px;
 }
